[package]
name = "clueboard-rust-firmware"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stm32f3xx-hal = { version = "0.8.0", features = ["ld", "rt", "stm32f303xc", "usb"] }
#keyberon = { git = "https://github.com/wezm/keyberon" }
keyberon = { path = "../keyberon" }
cortex-m = "0.7"
cortex-m-rt = { version = "0.7", features = ["device"] }
panic-halt = "0.2"
cortex-m-rtic = "0.5"
embedded-hal = "0.2"
usb-device = "0.2.0"

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = true
